--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<div class="header">
+		<h1>Logo</h1>
+	</div>
 	This is first comit!
 	
 	Thi line is added on GitHub
